--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
     "js": "^0.1.0",
     "node": "^20.5.0",
     "rxjs": "~7.8.0",
