--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "serve": "ng serve --proxy-config src/app/config/proxy.conf.json"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.1",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.1",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
-    "bootstrap": "^5.3.1",
-    "bootstrap-icons": "^1.10.5",
     "js": "^0.1.0",
     "node": "^20.5.0",
     "rxjs": "~7.8.0",
